// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render book component GraphQL error 1`] = `
<div>
  <div
    class="component"
  >
    <h2
      class="component__title"
    >
      Book
    </h2>
    <a
      href="/"
    >
      <img
        alt="Return button"
        class="home-button"
        src=""
      />
    </a>
    <p>
      Error -.-
    </p>
  </div>
</div>
`;

exports[`Render book component Loading state 1`] = `
<div>
  <div
    class="component"
  >
    <h2
      class="component__title"
    >
      Book
    </h2>
    <a
      href="/"
    >
      <img
        alt="Return button"
        class="home-button"
        src=""
      />
    </a>
    <p>
      Loading list of authors ..
    </p>
  </div>
</div>
`;

exports[`Render book component Network error 1`] = `
<div>
  <div
    class="component"
  >
    <h2
      class="component__title"
    >
      Book
    </h2>
    <a
      href="/"
    >
      <img
        alt="Return button"
        class="home-button"
        src=""
      />
    </a>
    <p>
      Error -.-
    </p>
  </div>
</div>
`;

exports[`Render book component Success state 1`] = `
<div>
  <div
    class="component"
  >
    <h2
      class="component__title"
    >
      Book
    </h2>
    <a
      href="/"
    >
      <img
        alt="Return button"
        class="home-button"
        src=""
      />
    </a>
    <form
      class="form"
    >
      <label
        for="select_author"
      >
        Select the author
      </label>
      <select
        name="select_author"
      >
        <option
          value=""
        />
        <option
          value="1"
        >
          author1
        </option>
      </select>
    </form>
  </div>
</div>
`;
